<resources>
    <string name="stock_card_opening_price">開盤價</string>
    <string name="stock_card_closing_price">收盤價</string>
    <string name="stock_card_highest_price">最高價</string>
    <string name="stock_card_lowest_price">最低價</string>
    <string name="stock_card_price_change">漲跌價差</string>
    <string name="stock_card_monthly_average_price">月平均價</string>
    <string name="stock_card_transaction_count">成交筆數</string>
    <string name="stock_card_trade_volume">成交股數</string>
    <string name="stock_card_trade_value">成交金額</string>
    <string name="sort_descending">依股票代號降序</string>
    <string name="sort_ascending">依股票代號升序</string>
    <string name="dialog_confirm">確定</string>
    <string name="stock_detail_title">%1$s %2$s</string>
    <string name="stock_detail_pe_ratio">本益比：%1$s</string>
    <string name="stock_detail_dividend_yield">殖利率(%%)：%1$s</string>
    <string name="stock_detail_pb_ratio">股價淨值比：%1$s</string>
</resources>

